Github issue#151, Error state of form elements is not visible — Added error class for registration form

--- a/app/styles/connect/connect.scss
+++ b/app/styles/connect/connect.scss
@@ -149,6 +149,7 @@
 
   .connect-accounts-form .wrapper.wrapper-half {
     display: inline-block;
+    vertical-align: top;
     width: calc(50% - 12px);
   }
 
